# monzo-app

./: .gitignore  README.md  main.py  pyproject.toml
old/v0/: monzo.py
old/v0/screens/: __init__.py  dashboard_screen.py  exclusions_screen.py  quit_modal_screen.py
old/v0/views/: __init__.py  exclusions_view.py  pay_day_view.py  spending_last_month.py  top_categories_table_view.py
old/v1/screens/: __init__.py  dashboard_screen.py  exclusions_modal_screen.py
old/v1/widgets/: latest_transactions_table.py
old/v2/: IMPLEMENTATION_SUMMARY.md  app.py  debug_loading_test.py  minimal_loading_test.py  simple_state_test.py  test_imports.py  test_loading_states.py  test_reactive_widgets.py
old/v2/core/: __init__.py  data_service.py  events.py  settings.py  state.py
old/v2/screens/: __init__.py  base.py  dashboard.py  exclusions.py  settings.py
old/v2/utils/: __init__.py  helpers.py
old/v2/widgets/: __init__.py  base.py  reactive_label.py
src/: app.py
src/assets/: styles.tcss
src/monzo_cli/: main.py
src/monzo_tui/: __init__.py  monzo.py  stopwatch_app.py
src/monzo_tui/assets/: logo.txt  styles.tcss
src/monzo_tui/screens/: __init__.py  dashboard_screen.py  settings_screen.py  sql_screen.py
src/monzo_tui/views/: __init__.py  balance.py  custom_sql_chart_view.py  custom_sql_table_view.py  dashboard_screen.py  data_view.py  latest_transactions_view.py  logo_view.py  monthly_chart_view.py  pay_day_view.py  quit_modal_screen.py  settings_screen.py  spending_last_month.py  stopwatch.py  time_display.py  top_categories_table_view.py  top_merchants_table_view.py  transactions_table.py
src/old/v0/: monzo.py
src/old/v1/: app.py
src/old/v2/: README.md  TEXTUAL_CSS_REFERENCE.md  app.py  debug_loading_test.py  minimal_loading_test.py  run.py  simple_state_test.py  test_imports.py  test_loading_states.py  test_reactive_widgets.py
src/screens/: __init__.py  dashboard_screen.py  other_screen.py
src/tests/: conftest.py  test_main_app.py  test_reactive_label.py
src/v0/assets/: styles.tcss
src/v0/screens/: dashboard_screen.py  exclusions_screen.py  sql_screen.py
src/v0/views/: __init__.py  balance_view.py  top_merchants_table_view.py
src/v1/: app.py  utilities.py
src/v1/assets/: styles.tcss
src/v1/screens/: __init__.py  dashboard_screen.py  detail_modal_screen.py  exclusions_modal_screen.py  settings_modal_screen.py
src/v1/sql_scripts/: add_pay_days_table.sql
src/v1/widgets/: __init__.py  balance_card.py  data_widget.py  last_month_category_chart.py  latest_transactions_table.py  monthly_spend_chart.py  (+4 more)
src/widgets/: __init__.py  reactive_label.py
(+38 files in other folders)
